--- a/.gitignore
+++ b/.gitignore
@@ -1,180 +1,27 @@
-import { FeeGroup } from './entities/FeeGroups.js';
-import numberToCurrency from '../core/helpers/currency.js';
-
-export default class InvestmentAccountFee {
-  #feeName = 'Investment Account Fees';
-  #investiment = {};
-  #accounts = [];
-  #accountsDDA = [];
-  #allExceptions = new Set();
-
-  constructor(fees, accounts, equityField) {
-    this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
-    if (
-      !this.#investiment ||
-      !Array.isArray(this.#investiment.feeGroups) ||
-      !this.#investiment.feeGroups.length
-    ) {
-      this.#investiment = {};
-      return;
-    }
-    const feeGroupCode = this.#investiment.feeGroups[0].code;
-
-    this.#accounts = accounts.filter((x) => x.feeType === 3);
-
-    if (this.#accounts.length < 1) {
-      this.#investiment = {};
-      return;
-    }
-
-    this.#accounts.forEach((acc) => {
-      if (acc.ddaNumber) {
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 5,
-          entity: acc.entity || null,
-        });
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 7,
-          entity: acc.entity || null,
-        });
-      }
-    });
-    
-    this.#accountsDDA = Array.from(
-      new Map(this.#accountsDDA.map(item => [`${item.number}-${item.code}`, item])).values()
-    );
-
-    this.#addMultiplesAccount(this.#accounts[0].cifno, equityField);
-    this.#addCurrentClientValue(equityField);
-  }
-
-  get fee() {
-    if (!this.#investiment || !this.#investiment.feeGroups) {
-      return null;
-    }
-    return this.#investiment;
-  }
-
-  #addMultiplesAccount(cif, equityField) {
-    const result = {};
-
-    for (const feeGroup of this.#investiment.feeGroups) {
-      for (const account of this.#accountsDDA) {
-        if (!result[account.number]) {
-          result[account.number] = {};
-        }
-
-        // Se feeGroup.fields estiver vazio, tenta criar um fallback com equityField.value
-        let fields = feeGroup.fields.filter((x) => x.code === account.code);
-        if (fields.length === 0 && equityField && equityField.value) {
-          fields = [{
-            code: account.code,
-            defaultValue: equityField.value,
-            isStandard: true,
-            isCurrentClient: false,
-            isException: false,
-            labelValue: equityField.value,
-            exceptionOptions: []
-          }];
-        }
-        if (fields.length === 0) continue;
-
-        if (!result[account.number][feeGroup.name]) {
-          result[account.number][feeGroup.name] = [];
-
-          feeGroup.fields?.forEach((item) => {
-            if (!item.exceptionOptions) {
-              item.exceptionOptions = [];
-            }
-            item.exceptionOptions = item.exceptionOptions.filter((x) => !x.retired);
-            item.exceptionOptions.forEach(this.#allExceptions.add, this.#allExceptions);
-          });
-
-          const newFeeGroup = new FeeGroup({
-            name: feeGroup.name,
-            fields,
-            cif,
-            accountNumber: account.number,
-            visible: feeGroup.visible,
-            code: feeGroup.code,
-            entityCode: account.entity,
-          });
-          result[account.number][feeGroup.name].push(newFeeGroup);
-          continue;
-        }
-
-        const feeGroupToAddFields = result[account.number][feeGroup.name][0];
-        feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fields];
-      }
-    }
-
-    const feeGroupsByAccount = Object.keys(result).reduce((acc, accountNumber) => {
-      Object.keys(result[accountNumber]).forEach((groupName) => {
-        acc.push(result[accountNumber][groupName]);
-      });
-      return acc;
-    }, []);
-
-    this.#investiment.feeGroups = [];
-    for (const feeGroups of feeGroupsByAccount) {
-      for (const feeGroup of feeGroups) {
-        this.#investiment.feeGroups.push(feeGroup);
-      }
-    }
-  }
-
-  #addCurrentClientValue(equityField) {
-    const exceptionsOptions = Array.from(this.#allExceptions);
-    for (const [feeGroupIndex, feeGroup] of this.#investiment.feeGroups.entries()) {
-      feeGroup.cif = this.#accounts[0]?.cifno || null;
-      for (const [fieldIndex, field] of feeGroup.fields.entries()) {
-        if (field.isException) {
-          if (
-            feeGroupIndex > 0 &&
-            this.#investiment.feeGroups[feeGroupIndex - 1].fields[fieldIndex]
-          ) {
-            field.labelValue =
-              this.#investiment.feeGroups[feeGroupIndex - 1].fields[fieldIndex].labelValue || '';
-          }
-        } else {
-          for (const account of this.#accounts) {
-            if (
-              field.code === account.ddaNumber &&
-              feeGroup.accountNumber.toString() === account.ddaNumber.toString()
-            ) {
-              if (field.code === 5) {
-                // Para fields com código 5, usamos o valor que vem do banco (texto)
-                field.labelValue = field.defaultValue;
-              } else {
-                if (field.labelValue !== 'Other') {
-                  if (field.isCurrentClient) {
-                    field.defaultValue = account.feeCode?.toString() || '';
-                  }
-                  let exception = exceptionsOptions.find((x) => x.value === field.defaultValue);
-                  if (!exception && equityField?.exceptionOptions) {
-                    exception = equityField.exceptionOptions.find(
-                      (e) => e.value === field.defaultValue
-                    );
-                  }
-                  if (!exception) {
-                    exception = { text: '' };
-                  }
-                  field.labelValue = exception.text;
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-    this.#clearMemory();
-  }
-
-  #clearMemory() {
-    this.#accounts = [];
-    this.#accountsDDA = [];
-    this.#allExceptions = new Set();
-  }
-}
+CustomerName	CustomerShortName	CustomerAddress	CIFNO	ACCTNO	FeeDescription	FeeCode	Istransactional	FeeType	FeeAmount	Frequency	Branch City	Branch State	Branch Type	OfficerId	Officer	StandardException	Default Fee Package Id	Default Fee Package	Default Package Type	Default Fee Amount	Default Frequency
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115342	FX Outgoing Wire Fee	JH006	1	Bank Account Fees	25.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	25.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115342	FX Outgoing Wire (SafraLink) Fee	JH007	1	Bank Account Fees	10.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	10.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115342	Safekeeping of Securities	BPS002	0	Investment Fees	0.35% /YR min $375.00/QTR	0.35% /YR min $375.00/QTR	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	0.35% /YR min $375.00/QTR
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115342	SSL Account Maintanance Fee	BPS003	0	Investment Fees	375.00	Quarterly on Day 1	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	375.00	Quarterly on Day 1
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115342	US Equities Commission	BPS004	1	Investment Fees	$0.10 per share, min charge of $150 per trade	$0.10 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.10 per share, min charge of $150 per trade
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115342	Options Commission	BPS005	1	Investment Fees	$0.05 per share, min charge of $150 per trade	$0.05 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.05 per share, min charge of $150 per trade
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115822	Account Maintenance Fee	JH001	0	Client Fees	25.00	Monthly - Charged Quarterly	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	25.00	Monthly - Charged Quarterly
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115822	Hold Mail Fee	JH002	0	Client Fees	0.00	Annual - Charged Annual	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	0.00	Annual - Charged Annual
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115822	FX Outgoing Wire Fee	JH006	1	Bank Account Fees	0.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Exception	2	Domestic Individual	Individual	25.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115822	FX Outgoing Wire (SafraLink) Fee	JH007	1	Bank Account Fees	10.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	10.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115822	Safekeeping of Securities	BPS002	0	Investment Fees	0.35% /YR min $375.00/QTR	0.35% /YR min $375.00/QTR	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	0.35% /YR min $375.00/QTR
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115822	SSL Account Maintanance Fee	BPS003	0	Investment Fees	375.00	Quarterly on Day 1	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	375.00	Quarterly on Day 1
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115822	US Equities Commission	BPS004	1	Investment Fees	$0.10 per share, min charge of $150 per trade	$0.10 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.10 per share, min charge of $150 per trade
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115342	Options Commission	BPS005	1	Investment Fees	$0.05 per share, min charge of $150 per trade	$0.05 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.05 per share, min charge of $150 per trade
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7113617	FX Outgoing Wire Fee	JH006	1	Bank Account Fees	0.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Exception	2	Domestic Individual	Individual	25.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7113617	FX Outgoing Wire (SafraLink) Fee	JH007	1	Bank Account Fees	10.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	10.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7113617	Safekeeping of Securities	BPS002	0	Investment Fees	0.35% /YR min $375.00/QTR	0.35% /YR min $375.00/QTR	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	0.35% /YR min $375.00/QTR
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7113617	SSL Account Maintanance Fee	BPS003	0	Investment Fees	375.00	Quarterly on Day 1	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	375.00	Quarterly on Day 1
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7113617	US Equities Commission	BPS004	1	Investment Fees	$0.10 per share, min charge of $150 per trade	$0.10 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.10 per share, min charge of $150 per trade
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7113617	Options Commission	BPS005	1	Investment Fees	$0.05 per share, min charge of $150 per trade	$0.05 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.05 per share, min charge of $150 per trade
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115431	FX Outgoing Wire Fee	JH006	1	Bank Account Fees	25.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	25.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115431	FX Outgoing Wire (SafraLink) Fee	JH007	1	Bank Account Fees	10.00	NULL	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	10.00	NULL
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115431	Safekeeping of Securities	BPS002	0	Investment Fees	0.35% /YR min $375.00/QTR	0.35% /YR min $375.00/QTR	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	0.35% /YR min $375.00/QTR
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115431	SSL Account Maintanance Fee	BPS003	0	Investment Fees	375.00	Quarterly on Day 1	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	375.00	Quarterly on Day 1
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115431	US Equities Commission	BPS004	1	Investment Fees	$0.10 per share, min charge of $150 per trade	$0.10 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.10 per share, min charge of $150 per trade
+HHHH HHHHHH                             	HHHHHH HHHH         	2417 Tongass Ave #111                    HHH HHHH HH 33333                       	F016583	7115431	Options Commission	BPS005	1	Investment Fees	$0.05 per share, min charge of $150 per trade	$0.05 per share, min charge of $150 per trade	New York	NY	Domestic	369   	Mordekhai Aghai           BR 7	Standard	2	Domestic Individual	Individual	NULL	$0.05 per share, min charge of $150 per trade
